2025-04-23 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThroughput.m: add code to ensure that instances are deallocated
	by the thread that owns them (to avoid the possibility of the hash
	table containing the instances owned by the thread being corrupted).

2023-02-03 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.m: If the maximum number of threads desired is
	decreased  so that we have more threads than we want, the excess
	threads are now excluded from the set which may be acquired.
	This should increase the chance of those threads being unacquired
	so they can be terminated and removed from the pool.

2023-01-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GSCache.m: Raise exception when attempting to insert object with
	nil key.
	* GSCache.m: Remove erroneous unlock in exception handler.

2023-01-20 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h: The produce and consume functins of a link store
	should not count as modifying ownership of the link ... we should
	consider the link store to own links whether in the free list or
	the main list.

2023-01-13 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: bump version for 0.6.0 release

2022-07-06 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThreadPool.h:
	* GSIOThreadPool.h:
	* GSThreadPool.m:
	* GSIOThreadPool.m:
	Add support for naming the pools, with threads named sequentially (as
	they are created) based on the pool name.

2019-04-16 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	Added -setName:forConfiguration: method to set a cache to be
	configured by NSUserDefaults settings rather than programmatically.

2018-03-27 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.m: Make the code use NSThread's designated
	initialiser so that GSIOThread can be subclassed safely.

2017-07-13 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.m: Make the -terminate: method safe to call from